added the link to the css file

--- a/education.html
+++ b/education.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
    
     <title>My Education</title>
+    <link rel="stylesheet" href="education.css">
 </head>
 <body>
     <h1>My Education</h1>
